--- a/pyplatform-datawarehouse/requirements.txt
+++ b/pyplatform-datawarehouse/requirements.txt
@@ -1,5 +1,5 @@
 # datawarehouse = bigquery functions only
-google-cloud-bigquery>=1.24.0
+google-cloud-bigquery>=1.24.0,<1.27.0
 google-cloud-bigquery-storage
 pyarrow==0.16.0
 xlrd
