--- a/pyplatform-database/requirements.txt
+++ b/pyplatform-database/requirements.txt
@@ -1,7 +1,7 @@
 # database = azure sql
-pyodbc
-sqlalchemy
-xlrd
-XlsxWriter
-openpyxl
+pyodbc==4.0.28
+sqlalchemy==1.3.19
+xlrd==1.2.0
+XlsxWriter==1.3.3
+openpyxl==3.0.3
 pyplatform-common
