--- a/pyplatform-datalake/requirements.txt
+++ b/pyplatform-datalake/requirements.txt
@@ -1,10 +1,11 @@
 # datalake = gcs, azure storage, sharepoint, onedrive, local files
-google-cloud-storage>=1.24.0
-gcsfs>=0.6.0
+google-cloud-storage==1.31.0
+gcsfs==0.7.0
 azure-storage-blob==1.5.0
-xlrd
-XlsxWriter
-openpyxl
+xlrd==1.2.0
+XlsxWriter==1.3.3
+openpyxl==3.0.3
+fsspec==0.8.0
 pyplatform-common
 
 
