--- a/pyplatform-datawarehouse/requirements.txt
+++ b/pyplatform-datawarehouse/requirements.txt
@@ -1,9 +1,9 @@
 # datawarehouse = bigquery functions only
-google-cloud-bigquery>=1.24.0,<1.27.0
-google-cloud-bigquery-storage
+google-cloud-bigquery==1.26.1
+google-cloud-bigquery-storage==1.1.0
 pyarrow==0.16.0
-xlrd
-XlsxWriter
-openpyxl
+xlrd==1.2.0
+XlsxWriter==1.3.3
+openpyxl==3.0.3
 pyplatform-common
 
