--- a/pyplatform-reporting/requirements.txt
+++ b/pyplatform-reporting/requirements.txt
@@ -1,8 +1,10 @@
 # reporting tableau server , sharepoint, onedrive
-tableauhyperapi>=0.0.10622
-tableauserverclient>=0.10
-pantab>=1.1.0
-xlrd
-XlsxWriter
-openpyxl
+tableauhyperapi==0.0.11355
+tableauserverclient==0.13
+pantab==1.1.0
+xlrd==1.2.0
+XlsxWriter==1.3.3
+openpyxl==3.0.3
+fsspec==0.8.0
+gcsfs==0.7.0
 pyplatform-common
